<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobimove.createcv.MainActivityCV">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/text"
        android:textColor="@color/Purple"
        android:textSize="@dimen/Text_Size" />


    <EditText
        android:id="@+id/EditText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TextView"
        android:layout_marginTop="20dp"
        android:ems="20"
        android:inputType="textPersonName"
        android:hint="@string/str_hint_name"/>

    <EditText
        android:id="@+id/DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/EditText_name"
        android:layout_marginTop="20dp"
        android:ems="20"
        android:inputType="textPersonName"
        android:hint="@string/DOB"/>

    <EditText
        android:id="@+id/EditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/DOB"
        android:layout_marginTop="20dp"
        android:hint="@string/Address"
        android:ems="20"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/EditText1"
        android:layout_marginTop="20dp"
        android:ems="20"
        android:inputType="phone"
        android:hint="@string/Phone" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/phone"
        android:layout_marginTop="20dp"
        android:ems="20"
        android:inputType="textEmailAddress"
        android:hint="@string/Email" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:onClick="Next"
        android:text="@string/Next" />

</RelativeLayout>



