<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".ThirdActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_skills"
        android:textSize="@dimen/Text_Size"
        android:textColor="@color/Purple"
        android:layout_below="@id/imageView"
        android:layout_marginTop="30dp"
        android:id="@+id/skill"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first"
        android:layout_below="@+id/skill"
        android:layout_marginTop="20dp"
        android:hint="@string/first"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second"
        android:layout_below="@id/first"
        android:layout_marginTop="20dp"
        android:hint="@string/second"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/third"
        android:layout_below="@id/second"
        android:layout_marginTop="20dp"
        android:hint="@string/third"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/third"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:onClick="moveToFourthActivity"
        android:text="@string/Next" />





</RelativeLayout>
