<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobimove.createcv.SecondActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/Education"
        android:textColor="@color/Purple"
        android:textSize="@dimen/Text_Size" />



    <EditText
        android:id="@+id/college_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/college"
        android:layout_below="@id/TextView"
        android:layout_marginTop="20dp"
        android:ems="20"
        android:inputType="text" />



    <EditText
        android:id="@+id/secondary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/college_text"
        android:hint="@string/secondary"
        android:layout_marginTop="20dp"
        android:ems="20"
        android:inputType="text" />


    <EditText
        android:id="@+id/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondary_text"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="@string/primary"
        android:inputType="text" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/primary_text"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:onClick="moveToThirdActivity"
        android:text="@string/Next" />


</RelativeLayout>
